The admin services page (offered-services.html) now uploads changes to the DB. It adds, edits, and removes services.

--- a/client_order_summary.css
+++ b/client_order_summary.css
@@ -75,7 +75,7 @@ input{
     width: 100%;
 }
 
-input[type="text"], textarea {
+input[type="text"],input[type="number"] textarea {
     width: 75%;
 }
 
