--- a/advanced-search.css
+++ b/advanced-search.css
@@ -1,6 +1,3 @@
-/* https://codepen.io/bcalou/pen/bGwJLqO */
-/* https://stackoverflow.com/questions/628500/can-i-stop-100-width-text-boxes-from-extending-beyond-their-containers */
-
 .open-sans-body {
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
@@ -78,18 +75,45 @@ input[type="text"] {
 .bookingOverlayElems{
     display: none;
 }
+@keyframes expand {
+    from {
+      transform: translate(-50%, -50%) scale(0.5);
+      opacity: 0;
+    }
+    to {
+      transform: translate(-50%, -50%) scale(1);
+      opacity: 1;
+    }
+  }
+  
+  @keyframes retract {
+    from {
+      transform: translate(-50%, -50%) scale(1);
+      opacity: 1;
+    }
+    to {
+      transform: translate(-50%, -50%) scale(0.5);
+      opacity: 0;
+    }
+  }
 #booking-content-block{
     background-color: white;
     position: fixed;
     width:20em;
-    height:25%;
     top: 50%;
     left: 50%;
     z-index: 1001;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
     padding:20px;
     border-radius: 10px;
+    opacity: 0;
+    transition: opacity 0.3s, transform 0.3s;
+}
+#booking-content-block.expand {
+    animation: expand 0.3s forwards;
+  }
+  
+#booking-content-block.retract {
+    animation: retract 0.3s forwards;
 }
 .field-class {
     margin-top: 15px;
