--- a/customers.css
+++ b/customers.css
@@ -33,3 +33,93 @@ input[type="date"]{
 .messages-container{
     display: none;
 }
+
+#submit-bill-button{
+    color:white;
+    text-decoration: none;
+    background-color: rgb(101, 9, 15);
+    height:25px;
+    width:100%;
+    margin-bottom: 1em;
+    border:0;
+}
+#submit-bill-button :hover {
+    background: rgb(56, 5, 8);
+}
+
+#bill-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.billOverlayElems{
+    display: none;
+}
+@keyframes expand {
+    from {
+      transform: translate(-50%, -50%) scale(0.5);
+      opacity: 0;
+    }
+    to {
+      transform: translate(-50%, -50%) scale(1);
+      opacity: 1;
+    }
+  }
+  
+  @keyframes retract {
+    from {
+      transform: translate(-50%, -50%) scale(1);
+      opacity: 1;
+    }
+    to {
+      transform: translate(-50%, -50%) scale(0.5);
+      opacity: 0;
+    }
+  }
+#bill-content-block{
+    background-color: white;
+    position: fixed;
+    width:20em;
+    top: 50%;
+    left: 50%;
+    z-index: 1001;
+    padding:20px;
+    border-radius: 10px;
+    opacity: 0;
+    transition: opacity 0.3s, transform 0.3s;
+}
+#bill-content-block.expand {
+    animation: expand 0.3s forwards;
+  }
+  
+#bill-content-block.retract {
+    animation: retract 0.3s forwards;
+}
+.date-filter-container{
+    margin-bottom: 1em;
+}
+.customer-btn {
+    color: rgb(0, 0, 0);
+    border:none;
+    justify-content: flex-start;
+    background-color: rgb(226, 226, 226);
+}
+.customer-btn:hover {
+    color: rgb(255, 255, 255);
+    background: rgb(103, 103, 103);
+}
+.customer-message{
+    border-style: double;
+    border-width:3px;
+    padding-left: 1em;
+}
+.my-message{
+    border-style: solid;
+    padding-left: 1em;
+}
