--- a/client-setting/client_order_summary2.css
+++ b/client-setting/client_order_summary2.css
@@ -76,3 +76,62 @@ th, td {
     text-align: left;
     padding: 10px;
 }
+
+.order-label:hover{
+    cursor: pointer;
+}
+
+#bill-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.billOverlayElems{
+    display: none;
+}
+@keyframes expand {
+    from {
+        transform: translate(-50%, -50%) scale(0.5);
+        opacity: 0;
+    }
+    to {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes retract {
+    from {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+    }
+    to {
+        transform: translate(-50%, -50%) scale(0.5);
+        opacity: 0;
+    }
+}
+#bill-content-block{
+    background-color: white;
+    position: fixed;
+    width:20em;
+    top: 50%;
+    left: 50%;
+    z-index: 1001;
+    padding:20px;
+    border-radius: 10px;
+    opacity: 0;
+    transition: opacity 0.3s, transform 0.3s;
+}
+#bill-content-block.expand {
+    animation: expand 0.3s forwards;
+}
+
+#bill-content-block.retract {
+    animation: retract 0.3s forwards;
+}
