--- a/client-setting/client_order_summary2.css
+++ b/client-setting/client_order_summary2.css
@@ -1,5 +1,4 @@
 .container-header{
-    border-bottom: 1px solid black;
     width: 100vh;
 }
 
@@ -10,7 +9,7 @@
     width: 130px;
     border-right: 1px solid black;
     height: 100vh;
-    padding-right: 20px;
+    padding-right: 25px;
     padding-top: 30px;
 }
 
@@ -69,7 +68,7 @@ table, th, td {
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #bebebe;
 }
 
 th, td {
@@ -134,4 +133,10 @@ th, td {
 
 #bill-content-block.retract {
     animation: retract 0.3s forwards;
+}
+.odd-tr{
+    background-color: rgb(230, 230, 230);
+}
+.even-tr{
+    background-color: rgb(250, 250, 250);
 }
